complete webapp integration

--- a/src/rosgpt/webapp/index.html
+++ b/src/rosgpt/webapp/index.html
@@ -62,15 +62,15 @@ h1 {
 
 <body>
   <div class="container">
-    <h1>ChatRover</h1>
+    <h1>ChatPuppy</h1>
 
     <h4>Suggested commands</h4>
 
     <ul>
       <li><h6>"Move forward for 1 meter at a speed of 0.5 meters per second."</h6></li>
       <li><h6>"Move backward for 2 meters at a speed of 0.7 meters per second."</h6></li>
-      <li><h6>"Rotate clockwise for 3 radians at a speed of 0.6 radians per second."</h6></li>
-      <li><h6>"Rotate anticlockwise for 4 radians at a speed of 0.5 radians per second."</h6></li>
+      <li><h6>"Rotate head clockwise for 3 radians at a speed of 0.6 radians per second."</h6></li>
+      <li><h6>"Rotate torso anticlockwise for 4 radians at a speed of 0.5 radians per second."</h6></li>
       <li><h6>"Stop moving"</h6></li>
       <li><h6>German:</h6></li>
       <li><h6>"Bewegen Sie sich vorwärts für 1 Meter mit einer Geschwindigkeit von 0,5 Metern pro Sekunde."</h6></li>
@@ -78,7 +78,7 @@ h1 {
       <li><h6>"Mae ni 1 meter, 0.5 meters per second no sokudo de susumu."</h6></li>
       <li><h6>Hindi:</h6></li>
       <li><h6>"Aage badho 1 meter, 0.5 meters per second ke liye."</h6></li>
-  </ul>
+    </ul>
   
 </div>
 <div class="container">
